Fix the non-scrolling Grid in Chrome. Fix the moving virtual scrollbar on Grid focus in Chrome.

--- a/demos/mvc/content/shared/styles/examples.css
+++ b/demos/mvc/content/shared/styles/examples.css
@@ -909,6 +909,11 @@ p#copy
     line-height:30px;
 }
 
+#example .k-grid-content table
+{
+    -webkit-transform: translatez(0);
+}
+
 #qrWrap
 {
     padding-right:14px;
